1.recyclerview 測試＋Brvah lib+ spannedGridLayoutManager 2.增加spannedGrid測試 3.圖>API24 也會出現binary錯誤

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,12 @@ android {
                 implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
             }
         }
+        SpannedGrid{
+            dimension "layout"
+            applicationIdSuffix ".spannedgm"
+            versionNameSuffix "-spannedgm"
+            minSdkVersion 22
+        }
         common {
             dimension "common"
         }
